fibonacci_project/k8s/express-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-service
spec:
  type: ClusterIP
  selector:
    component: api
  ports:
  - port: 5000
    targetPort: 5000
