fibonacci_project/k8s/react-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-service
spec:
  type: ClusterIP
  selector:
    component: frontend
  ports:
  - port: 3000
    targetPort: 3000
