fibonacci_project/k8s/fibonacci-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fibonacci-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: fibonacci.com
    http:
      paths:
      - pathType: Prefix
        path: "/?(.*)"
        backend:
          service:
            name: react-service
            port: 
              number: 3000
      - pathType: Prefix
        path: "/api/?(.*)"
        backend:
          service:
            name: express-service
            port: 
              number: 5000
